# Novembre

./: CMakeLists.txt  Doxyfile  FilePlugins.cmake  Files_Createc.cmake  Files_Nanonis.cmake  Files_RHK.cmake  Files_WinSPM.cmake  FindQwt6.cmake  FindZLib.cmake  Novembre.pri  Novembre.pro  NovembreBrowser.cmake  NovembreConfig.cmake  NovembreLibrary.cmake  QwtPlot3D.cmake  README.md  copy_header_lib  createc.pro  fileplg.pro  nanonis.pro  nvb.pri  nvbcolor.pro  nvbdelegate.pri  nvbdviz.pro  nvbexport.pro  nvbfile.pri  nvbimport.pro  nvblib.pro  nvbmain.pro  nvbrws.pro  nvbspec.pro  nvbtopo.pro  qwtplot3d.pro  rhk.pro  rhk4.pro  scala.pro  textSTM.pro  tools.pro  winspm.pro
devtools/: PLAN  call_Artistic_Style.astylerc  copy_header_lib  copy_header_ui  date_hg.py  licence-adder.py  licence-remover.py
devtools/nvb_gdb_printers/: __init__.py  printer.py
icons/: averager.xpm  browser.xpm  ccoloring.xpm  classifier.xpm  dcoloring.xpm  excluder.xpm  export.xpm  fft.xpm  file_browse.xpm  file_open.xpm  file_save.xpm  fish.xpm  generators.xpm  icons_2Dview.xpm  icons_3Dview.xpm  icons_FW.xpm  icons_Gview.xpm  icons_log.xpm  iconsize.xpm  import.xpm  info.xpm  leveler.xpm  mainwindow.xpm  math.xpm  minus.xpm  novembre.rc  novembre.xpm  novembre_v0.small.xpm  novembre_v0.xpm  novembre_v1.xpm  nvb.icns  plus.xpm  radial.xpm  shift.xpm  singleview.xpm  slice.xpm  smooth.xpm  substractor.xpm  template.xpm
install/: Novembre-0.0.4g.ebuild  Novembre-0.0.4h.ebuild
src/: NVB2DPageView.cpp  NVB2DPageView.h  NVB2DVizDelegates.cpp  NVB2DVizDelegates.h  NVB3DPageView.cpp  NVB3DPageView.h  NVB3DView.cpp  NVB3DVizDelegates.cpp  NVB3DVizDelegates.h  NVBAverageColor.h  NVBAxesSelector.h  NVBAxis.h  NVBAxisMaps.h  NVBAxisSelector.cpp  NVBAxisSelector.h  NVBAxisSelectorHelpers.cpp  NVBAxisSelectorHelpers.h  NVBBrowser.cpp  NVBBrowser.h  NVBBrowserHelpers.cpp  NVBBrowserHelpers.h  NVBCircAverager.cpp  NVBCircAverager.h  NVBCollapsibleBox.cpp  NVBCollapsibleBox.h  NVBColorAdjustProvider.cpp  NVBColorAdjustProvider.h  NVBColorButton.h  NVBColorMaps.cpp  NVBColorMaps.h  NVBColorWidgets.cpp  NVBColorWidgets.h  NVBColumnDialog.cpp  NVBColumnDialog.h  NVBColumnsModel.cpp  NVBColumnsModel.h  NVBContColorModel.h  NVBContColorScaler.cpp  NVBContColorScaler.h  NVBContColoring.cpp  (+227 more)
src/core/: NVBAxis.h  NVBAxisMaps.h  NVBAxisSelector.cpp  NVBAxisSelector.h  NVBAxisSelectorHelpers.cpp  NVBAxisSelectorHelpers.h  NVBColorMaps.cpp  NVBColorMaps.h  NVBContColorModel.h  NVBContColoring.h  NVBDataCore.cpp  NVBDataCore.h  NVBDataSource.cpp  NVBDataSource.h  NVBDataSourceModel.cpp  NVBDataSourceModel.h  NVBDataTransforms.cpp  NVBDatasetIcons.cpp  NVBDelegateProvider.h  NVBDimension.cpp  NVBDimension.h  NVBDiscrColorModel.h  NVBDiscrColoring.cpp  NVBDiscrColoring.h  NVBFile.cpp  NVBFile.h  NVBFileGenerator.h  NVBFileInfo.cpp  NVBFileInfo.h  NVBFilterDelegate.cpp  NVBFilterDelegate.h  NVBFuncDataSource.cpp  NVBFuncDataSource.h  NVBGeneralDelegate.h  NVBGraphicsItems.cpp  NVBGraphicsItems.h  NVBIconProvider.h  NVBLogger.cpp  NVBLogger.h  NVBMap.cpp  (+30 more)
src/files/: createc.cpp  createc.h  nanonis.3ds.cpp  nanonis.cpp  nanonis.dat.cpp  nanonis.h  nanonis.sxm.cpp  rhk.cpp  rhk.h  rhk4.cpp  rhk4.h  winspm.cpp  winspm.h
src/filters/: NVB2DVizDelegates.cpp  NVB2DVizDelegates.h  NVB3DVizDelegates.cpp  NVB3DVizDelegates.h  NVBAverageColor.h  NVBCircAverager.cpp  (+48 more)
tests/testGenerator/: CMakeLists.txt  FindQwt6.cmake  testGenerator.cmake  testGenerator.cpp  testGenerator.h  testGenerator.pro  testGeneratorGUI.cmake  testGeneratorGUI.cpp  testGeneratorGUI.h  testGeneratorGUI.pro  test_rhk.py
(+137 files in other folders)
